ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $APP_NAME-v$APP_MAJOR_VERSION-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    secretName: mynewsecret
  rules:
    - host: edcweb.mylab-siab.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: '$APP_ROUTE_PATH'
            backend:
              service:
                name: $APP_NAME-v$APP_MAJOR_VERSION
                port:
                  number: 80
